스니펫 삭제, 뱃지 시스템, 복잡한 코드저장, 코드평가수정, 빈 코드평가 방지, AI피드백 개선